fix: introduction du composant `Table` avec pagination, des styles dédiés et ajout de la propriété `align` au composant `Group`.

--- a/src/components/Button/style/_button-base.scss
+++ b/src/components/Button/style/_button-base.scss
@@ -9,8 +9,8 @@
 	--btn-hover-border-color: var(--primary-dark);
 	--btn-active-bg: var(--primary-dark);
 	--btn-active-border-color: var(--primary-dark);
-	--btn-disabled-bg: var(--primary);
-	--btn-disabled-border-color: var(--primary);
+	--btn-disabled-bg: var(--gray-300);
+	--btn-disabled-border-color: var(--gray-300);
 
 	height: fit-content;
 	display: flex;
