--- a/src/components/Group/style/_group.scss
+++ b/src/components/Group/style/_group.scss
@@ -24,3 +24,11 @@
 		align-items: center;
 		justify-content: center;
 	}
+
+	.group--start {
+		justify-content: flex-start;
+	}
+
+	.group--end {
+		justify-content: flex-end;
+	}
